@@ -51,7 +51,7 @@ void cmd_affine_print_help(void)
 int cmd_affine(int argc, char *argv[])
 {
     int matrix_sizes[2] = { 2, 2 };
-    option_double_array_t matrix = { NULL, 2, matrix_sizes };
+    option_double_array_t matrix = { NULL, 0, NULL, 2, matrix_sizes };
     option_color_t color = { CVL_COLOR_BLACK };
     const char *interpolation_names[] = { "none", "bilinear", NULL };
     option_name_t interpolation = { 1, interpolation_names };
@@ -102,5 +102,6 @@ int cmd_affine(int argc, char *argv[])
     cvl_io_info_free(input_info);
     cvl_io_info_free(output_info);
     free(matrix.value);
+    free(matrix.value_sizes);
     return error ? 1 : 0;
 }
