@@ -1,4 +1,5 @@
 Version 0.0.2 (not yet released):
+- cvtool: Improved int/double array option handling.
 - cvtool: Added a layer command.
 - CVL: Added cvl_frame_layer().
 - cvtool: Changed channel command: extract as graylevel, and allow reversion.
